--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <h1>About Me</h1>
         <p>Hi, I'm Firdaus Mohammed, a passionate web developer.</p>
         <p>I am available for all your website needs.</p>
-        <img src="ff.jpg" alt="Firdaus Mohammed" width="300px">
+        <img src="ff.jpg" alt="Firdaus Mohammed" height="300px">
     </main>
 </body>
 </html>
