--- a/index.html
+++ b/index.html
@@ -3,28 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>Mohfitech Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <!-- Hero Section -->
+    <section id="hero">
         <h1>Welcome to My Portfolio</h1>
-        <button>Explore</button>
-    </header>
-    <main>
-        <section id="hero">
-            <h2>Hi, I'm Firdaus Mohammed</h2>
-            <p>Web Developer & Designer</p>
-        </section>
-    </main>
+        <p>Your placeholder tagline here...</p>
+        <button>Explore My Work</button>
+        <img src="YOUR_HERO_IMAGE.jpg" alt="Hero Background">
+    </section>
+    <!-- About Section -->
+    <section id="about">
+        <img src="YOUR_PROFILE_PICTURE.jpg" alt="Profile Picture">
+        <h2>About Me</h2>
+        <p>Your bio goes here...</p>
+    </section>
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>My Skills</h2>
+        <div class="skill">
+            <p>HTML/CSS</p>
+            <div class="progress-bar">
+                <div class="progress" style="width: 90%"></div>
+            </div>
+        </div>
+        <!-- Add more skills here -->
+    </section>
+    <!-- Blog Section (already updated) -->
+    <section id="blog">
+        <!-- Your blog content here -->
+    </section>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2023 Mohfitech</p>
+        <ul>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">Twitter</a></li>
+        </ul>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
