--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>Welcome to My Portfolio</h1>
         <p>Your placeholder tagline here...</p>
         <button>Explore My Work</button>
-        <img src="YOUR_HERO_IMAGE.jpg" alt="Hero Background">
+        <img src="fr.jpg" alt="Hero Background">
     </section>
     <!-- About Section -->
     <section id="about">
-        <img src="YOUR_PROFILE_PICTURE.jpg" alt="Profile Picture">
+        <img src="ff.JPG" alt="Profile Picture">
         <h2>About Me</h2>
         <p>Your bio goes here...</p>
     </section>
