--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome to My Portfolio</h1>
         <p>Your placeholder tagline here...</p>
         <button>Explore My Work</button>
-        <img src="fr.jpg" alt="Hero Background">
+        <img src="fr.jpg" alt="Hero Background" width="400px">
     </section>
     <!-- About Section -->
     <section id="about">
